GNOME Bugzilla – Bug 736390
tsdemux: plug for a memory leak
Last modified: 2014-09-11 18:28:15 UTC
Created attachment 285802 [details] [review] tsdemux: clear mutex resources in dispose tsdemux leaks memory from a mutex initialised in mpegts_packetizer_init This patch clears the mutex in the mpegts_packetizer_dispose function.
Thanks, pushed: commit ff444dbf6d312ab86833e5c088183811bf98946b Author: Jesper Larsen <knorr.jesper@gmail.com> Date: Wed Sep 10 10:58:03 2014 +0200 tsdemux: clear mutex resources in dispose https://bugzilla.gnome.org/show_bug.cgi?id=736390