tsdemux: clear mutex resources in dispose

https://bugzilla.gnome.org/show_bug.cgi?id=736390